k3s/generated_manifests/home-assistant/Deployment-home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
          image: ghcr.io/home-assistant/home-assistant:2026.4.2
          name: home-assistant
          ports:
            - containerPort: 8123
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
            privileged: true
          volumeMounts:
            - mountPath: /config
              name: home-assistant-config-volume
            - mountPath: /run/dbus
              name: d-bus
            - mountPath: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_cc5121307674ef11af55c48c8fcc3fa0-if00-port0
              name: zigbee
      nodeSelector:
        environment: zigbee
      volumes:
        - name: home-assistant-config-volume
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - hostPath:
            path: /run/dbus
          name: d-bus
        - hostPath:
            path: /dev/ttyUSB0
          name: zigbee
