k3s/generated_manifests/home-assistant/Service-home-assistant-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-lb
  namespace: home-assistant
spec:
  ports:
    - port: 8123
      targetPort: 8123
  selector:
    app: home-assistant
  type: LoadBalancer
