k3s/generated_manifests/home-assistant/Service-home-assistant-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home-assistant.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab-1.boreal-scala.ts.net
  name: home-assistant-tailscale
  namespace: home-assistant
spec:
  clusterIP: None
  type: ClusterIP
