k3s/generated_manifests/home-assistant/Service-home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: home-assistant-web
      port: 8123
  selector:
    app: home-assistant
  type: ClusterIP
