k3s/generated_manifests/home-assistant/Ingress-home-assistant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: home-assistant.doma.lol
