k3s/generated_manifests/home-assistant/IngressRoute-home-assistant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home-assistant.doma.lol`)
      services:
        - name: home-assistant-web
          port: 8123
  tls:
    certResolver: letsencrypt
    domains:
      - main: doma.lol
        sans:
          - '*.doma.lol'
